pre-changes to player turn logic

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -14,7 +14,7 @@
             <input class="forminputs" id="formplayerone" placeholder="Player 1 Name" type="text">
             <input class="forminputs" id="formplayertwo" placeholder="Player 2 Name" type="text">
             <div class="formbuttons">
-                <button type="button" id="addbutton">Start Game</button>
+                <button type="button" id="start">Start Game</button>
             </div>
         </form>
     </div>
