--- a/tictactoe.html
+++ b/tictactoe.html
@@ -10,9 +10,12 @@
 <body>
     <div id="form-container">
         <form id="form">
-            <h2>Enter player names:</h2>
-            <input class="forminputs" id="formplayerone" placeholder="Player 1 Name" type="text">
-            <input class="forminputs" id="formplayertwo" placeholder="Player 2 Name" type="text">
+            <h2>Welcome to Tic Tac Toe!</h2>
+            <h3>Enter Player Names:</h3>
+            <div class="form-row">
+                <input class="forminputs" id="formplayerone" placeholder="Player 1 Name" type="text">
+                <input class="forminputs" id="formplayertwo" placeholder="Player 2 Name" type="text">
+            </div>
             <div class="formbuttons">
                 <button type="button" id="start">Start Game</button>
             </div>
